Cleaning up RollupCalcItemReplacer logic surrounding when base fields need to be requeried taking advantage of SObject.isSet function

--- a/rollup/core/classes/RollupCalcItemReplacer.cls
+++ b/rollup/core/classes/RollupCalcItemReplacer.cls
@@ -87,13 +87,8 @@ public without sharing class RollupCalcItemReplacer {
   private void addQueryableFields(String fieldName, Set<String> parentQueryFieldSet, Set<String> baseQueryFieldSet, SObject calcItem) {
     if (fieldName.contains('.')) {
       parentQueryFieldSet.add(fieldName);
-    } else {
-      // calcItem.getPopulatedFieldsAsMap can't be used here because it doesn't populate for fields with null values
-      try {
-        calcItem.get(fieldName);
-      } catch (SObjectException ex) {
-        baseQueryFieldSet.add(fieldName);
-      }
+    } else if (calcItem.isSet(fieldName) == false) {
+      baseQueryFieldSet.add(fieldName);
     }
   }
 
