Adds new field, RollupControl__mdt.OnlyRunInFlowContexts__c to allow for finer-grained control over when flow rollups should run. Requested by @solo-1234. Still TODO - adding this as an optional property to the base invocable (currently only supported for the CMDT-based rollup)

--- a/rollup/core/classes/RollupFlowBulkProcessor.cls
+++ b/rollup/core/classes/RollupFlowBulkProcessor.cls
@@ -120,6 +120,7 @@ global without sharing class RollupFlowBulkProcessor {
             input.rollupFieldOnOpObject = meta.RollupFieldOnLookupObject__c;
             input.rollupOperation = meta.RollupOperation__c;
             input.rollupSObjectName = meta.LookupObject__c;
+            input.rollupControlId = meta.RollupControl__c;
             // everything else is supplied from the invocable
             input.calcItemTypeWhenRollupStartedFromParent = flowInput.calcItemTypeWhenRollupStartedFromParent;
             input.deferProcessing = flowInput.deferProcessing != null ? flowInput.deferProcessing : true;
