Adding PMD suppression to RollupDateLiteralTests now that the asserts are mostly self-contained

--- a/extra-tests/classes/RollupDateLiteralTests.cls
+++ b/extra-tests/classes/RollupDateLiteralTests.cls
@@ -1,4 +1,4 @@
-@SuppressWarnings('PMD.NcssTypeCount')
+@SuppressWarnings('PMD.NcssTypeCount, PMD.ApexUnitTestClassShouldHaveAsserts')
 @IsTest
 private class RollupDateLiteralTests {
   private static final Integer HOUR_IN_DAY = 6;
