--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -457,15 +457,13 @@ global without sharing virtual class Rollup {
       RollupMetadata metaWrapper;
       if (childToMetaWrapper.containsKey(childType)) {
         metaWrapper = childToMetaWrapper.get(childType);
-        metaWrapper.queryFields.addAll(whereFields);
-        metaWrapper.metadata.add(matchingMeta);
       } else {
         metaWrapper = new RollupMetadata();
-        metaWrapper.queryFields.addAll(wherefields);
-        metaWrapper.metadata.add(matchingMeta);
         metaWrapper.whereClause = matchingMeta.CalcItemWhereClause__c;
         childToMetaWrapper.put(childType, metaWrapper);
       }
+      metaWrapper.queryFields.addAll(wherefields);
+      metaWrapper.metadata.add(matchingMeta);
 
       if (amountOfCalcItems != RollupQueryBuilder.SENTINEL_COUNT_VALUE) {
         String countQuery = RollupQueryBuilder.Current.getQuery(
@@ -609,6 +607,9 @@ global without sharing virtual class Rollup {
     global String calcItemWhereClause;
     @InvocableVariable(label='Ultimate Parent Field' description='The lookup field in hierarchy rollups')
     global String ultimateParentLookup;
+
+    // internal variables!
+    public Id rollupControlId;
   }
 
   global class FlowOutput {
@@ -666,6 +667,9 @@ global without sharing virtual class Rollup {
         String rollupContext = getFlowRollupContext(flowInput, flowInput.recordsToRollup[0], sObjectType, flowInput.oldRecordsToRollup);
 
         Rollup__mdt meta = transformFlowInputToRollupMetadata(flowInput, rollupContext, sObjectType);
+        if (shouldSkipRollupForFlow(meta, rollupContext)) {
+          continue;
+        }
         if (metaToInputWrapper.containsKey(meta)) {
           FlowInputWrapper wrapper = metaToInputWrapper.get(meta);
           if (wrapper.rollupMetadata.contains(meta)) {
@@ -688,6 +692,9 @@ global without sharing virtual class Rollup {
     for (Rollup__mdt key : metaToInputWrapper.keySet()) {
       FlowInputWrapper wrapper = metaToInputWrapper.get(key);
       // here we clone the list because it can get winnowed in "processCustomMetadata"
+      if (wrapper == null) {
+        continue;
+      }
       List<Rollup__mdt> metas = new List<Rollup__mdt>(wrapper.rollupMetadata);
       wrapper.flowInput.recordsToRollup = replaceFlowInputCalcItemsIfNecessary(hashCodeToCalcItems, wrapper.flowInput.recordsToRollup, metas);
       wrapper.flowInput.oldRecordsToRollup = replaceFlowInputCalcItemsIfNecessary(hashCodeToCalcItems, wrapper.flowInput.oldRecordsToRollup, metas);
@@ -1738,6 +1745,7 @@ global without sharing virtual class Rollup {
       LookupObject__c = flowInput.rollupSObjectName,
       OneToManyGrandparentFields__c = flowInput.oneToManyGrandparentFields,
       OrderByFirstLast__c = flowInput.orderByFirstLast,
+      RollupControl__r = getSingleControlOrDefault(RollupControl__mdt.Id, flowInput.rollupControlId, defaultControl),
       RollupFieldOnCalcItem__c = flowInput.rollupFieldOnCalcItem,
       RollupFieldOnLookupObject__c = flowInput.rollupFieldOnOpObject,
       RollupOperation__c = rollupContext + flowInput.rollupOperation,
@@ -1745,6 +1753,17 @@ global without sharing virtual class Rollup {
       SplitConcatDelimiterOnCalcItem__c = flowInput.splitConcatDelimiterOnCalcItem,
       UltimateParentLookup__c = flowInput.ultimateParentLookup
     );
+  }
+
+  private static Boolean shouldSkipRollupForFlow(Rollup__mdt meta, String flowContext) {
+    if (String.isBlank(meta.RollupControl__r?.OnlyRunInFlowContexts__c)) {
+      return false;
+    }
+    Set<String> allowedContexts = new Set<String>();
+    for (String specificAllowedContext : meta.RollupControl__r.OnlyRunInFlowContexts__c.split(',')) {
+      allowedContexts.add(specificAllowedContext.trim());
+    }
+    return allowedContexts.isEmpty() ? false : allowedContexts.contains(flowContext) == false;
   }
 
   private static Rollup operateFromApex(
