Cleanup - fixed a few minor issues brought on by these changes (that were previously hiding, either due to the default full recalc values for number/text being used too liberally, or due to reurning 0s instead of nulls when there were no matching items

--- a/extra-tests/classes/CustomMetadataDrivenTests.cls
+++ b/extra-tests/classes/CustomMetadataDrivenTests.cls
@@ -138,7 +138,7 @@ private class CustomMetadataDrivenTests {
     System.assertEquals(grandparentTwo.Id, child.RollupParent__r.RollupGrandparent__c);
 
     grandparentOne = [SELECT AmountfromChildren__c FROM RollupGrandParent__c WHERE Id = :grandparentOne.Id];
-    System.assertEquals(0, grandparentOne.AmountfromChildren__c);
+    System.assertEquals(null, grandparentOne.AmountfromChildren__c);
 
     grandparentTwo = [SELECT AmountfromChildren__c FROM RollupGrandParent__c WHERE Id = :grandparentTwo.Id];
     System.assertEquals(child.NumberField__c, grandparentTwo.AmountfromChildren__c);
