--- a/extra-tests/classes/RollupTests.cls
+++ b/extra-tests/classes/RollupTests.cls
@@ -288,7 +288,7 @@ private class RollupTests {
 
     System.assertEquals(1, mock.Records.size(), 'Records should have been populated COUNT AFTER_UPDATE');
     Account updatedAcc = (Account) mock.Records[0];
-    System.assertEquals(0, updatedAcc.AnnualRevenue, 'COUNT AFTER_UPDATE should decrement when field is removed');
+    System.assertEquals(null, updatedAcc.AnnualRevenue, 'COUNT AFTER_UPDATE should decrement when field is removed');
   }
 
   @IsTest
@@ -338,9 +338,7 @@ private class RollupTests {
     Rollup.countFromApex(ContactPointAddress.PreferenceRank, ContactPointAddress.ParentId, Account.Id, Account.AnnualRevenue, Account.SObjectType).runCalc();
     Test.stopTest();
 
-    System.assertEquals(1, mock.Records.size(), 'Records should have been populated COUNT AFTER_INSERT');
-    Account updatedAcc = (Account) mock.Records[0];
-    System.assertEquals(0, updatedAcc.AnnualRevenue);
+    System.assertEquals(0, mock.Records.size(), 'Records should not have been populated COUNT AFTER_INSERT');
   }
 
   @IsTest
@@ -813,7 +811,7 @@ private class RollupTests {
 
     System.assertEquals(1, mock.Records.size(), 'Records should have been populated MAX BEFORE_DELETE');
     Account updatedAcc = (Account) mock.Records[0];
-    System.assertEquals(0, updatedAcc.AnnualRevenue, 'MAX BEFORE_DELETE should take the maximum cpaortunity amount');
+    System.assertEquals(null, updatedAcc.AnnualRevenue, 'MAX BEFORE_DELETE should take the maximum cpaortunity amount');
   }
 
   @IsTest
@@ -3083,7 +3081,7 @@ private class RollupTests {
     Datetime nowish = System.now();
 
     // it only matters that the amount below is LESS than the above value, and that "nowish" is assigned to the fullRecalculationDefaultNumberValue flow input value
-    List<Event> events = new List<Event>{ new Event(ActivityDateTime = nowish.addDays(-2), WhatId = con.Id) };
+    List<Event> events = new List<Event>{ new Event(WhatId = con.Id) };
     RollupTestUtils.DMLMock mock = RollupTestUtils.loadMock(events);
     Rollup.records = null;
 
@@ -3304,7 +3302,7 @@ private class RollupTests {
     Account updatedAcc = (Account) mock.Records[0];
     System.assertEquals(325, updatedAcc.AnnualRevenue, 'SUM AFTER_UPDATE should take the diff between the current amount and the pre-existing one');
     Account updatedOldAcc = (Account) mock.Records[1];
-    System.assertEquals(0, updatedOldAcc.AnnualRevenue, 'SUM AFTER_UPDATE should take the diff between the current amount and the pre-existing one');
+    System.assertEquals(null, updatedOldAcc.AnnualRevenue, 'SUM AFTER_UPDATE should take the diff between the current amount and the pre-existing one');
   }
 
   @IsTest
@@ -3335,7 +3333,7 @@ private class RollupTests {
       'SUM AFTER_UPDATE should take the diff between the current amount and the pre-existing one'
     );
     Account updatedOldAcc = (Account) mock.Records[1];
-    System.assertEquals(0, updatedOldAcc.AnnualRevenue, 'SUM AFTER_UPDATE should take the diff between the current amount and the pre-existing one');
+    System.assertEquals(null, updatedOldAcc.AnnualRevenue, 'SUM AFTER_UPDATE should take the diff between the current amount and the pre-existing one');
   }
 
   @IsTest
@@ -3372,7 +3370,7 @@ private class RollupTests {
 
     System.assertNotEquals(0, mock.Records.size());
     Account updatedAcc = (Account) new Map<Id, SObject>(mock.Records).get(acc.Id);
-    System.assertEquals(0, updatedAcc.AnnualRevenue, 'Count should have been decremented');
+    System.assertEquals(null, updatedAcc.AnnualRevenue, 'Count should have been decremented');
   }
 
   @IsTest
@@ -3479,7 +3477,7 @@ private class RollupTests {
       if (updatedAcc.Id == acc.Id) {
         System.assertEquals(1, updatedAcc.AnnualRevenue, 'COUNT AFTER_UPDATE should only count updated entries reparented to it');
       } else if (updatedAcc.Id == oldAcc.Id) {
-        System.assertEquals(0, updatedAcc.AnnualRevenue, 'Old account should have had its annual revenue decremented');
+        System.assertEquals(null, updatedAcc.AnnualRevenue, 'Old account should have had its annual revenue decremented');
       }
     }
   }
