--- a/rollup/core/classes/RollupParentResetProcessor.cls
+++ b/rollup/core/classes/RollupParentResetProcessor.cls
@@ -63,19 +63,20 @@ public without sharing class RollupParentResetProcessor extends RollupFullBatchR
     return processId;
   }
 
-  public override void execute(Database.BatchableContext bc, List<SObject> calcItems) {
-    if (calcItems.isEmpty()) {
+  public override void execute(Database.BatchableContext bc, List<SObject> parentItems) {
+    if (parentItems.isEmpty()) {
       return;
     }
-    RollupLogger.Instance.log('resetting parent fields for: ' + calcItems.size() + ' items', LoggingLevel.DEBUG);
-    for (SObject parentItem : calcItems) {
+    RollupLogger.Instance.log('resetting parent fields for: ' + parentItems.size() + ' items', LoggingLevel.DEBUG);
+    Map<String, Schema.SObjectField> parentFields = parentItems.get(0).getSObjectType().getDescribe().fields.getMap();
+    for (SObject parentItem : parentItems) {
       for (Rollup__mdt rollupMeta : this.rollupInfo) {
-        if (this.parentRollupFieldHasBeenReset(rollupMeta, parentItem) == false) {
+        if (this.parentRollupFieldHasBeenReset(rollupMeta, parentItem) == false && parentFields.containsKey(rollupMeta.RollupFieldOnLookupObject__c)) {
           parentItem.put(rollupMeta.RollupFieldOnLookupObject__c, null);
         }
       }
     }
-    this.getDML().doUpdate(calcItems);
+    this.getDML().doUpdate(parentItems);
   }
 
   protected override String getTypeName() {
@@ -106,7 +107,7 @@ public without sharing class RollupParentResetProcessor extends RollupFullBatchR
         .fields.getMap();
       for (Rollup__mdt meta : matchingMeta) {
         SObjectField token = RollupFieldInitializer.Current.getSObjectFieldByName(fieldTokens, meta.RollupFieldOnLookupObject__c);
-        if (token.getDescribe().isFilterable()) {
+        if (token?.getDescribe().isFilterable() == true) {
           isValidRun = isValidRun || true;
           additionalFilters += meta.RollupFieldOnLookupObject__c + (' != null' + orClause);
         }
